<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

  <TableRow
    android:layout_width="284dp"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="1"
      android:padding="10sp"
      android:text="@string/india"
      android:textColor="@color/black" />

    <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="2"
      android:padding="10sp"
      android:text="@string/england"
      android:textColor="@color/black" />

  </TableRow>

  <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="0"
      android:padding="10sp"
      android:text="@string/first_innings"
      android:textColor="@color/black" />

    <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="1"
      android:padding="10sp"
      android:text="@string/india_first_innings" />

    <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="2"
      android:padding="10sp"
      android:text="@string/england_first_innings" />
  </TableRow>

  <TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/textView14"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="0"
      android:padding="10sp"
      android:text="@string/second_innings"
      android:textColor="@color/black" />

    <TextView
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="1"
      android:padding="10sp"
      android:text="@string/india_second_innings" />

    <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="2"
      android:padding="10sp"
      android:text="@string/england_second_innings" />

  </TableRow>

  <TableRow
    android:layout_width="407dp"
    android:layout_height="match_parent">

    <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_column="0"
      android:layout_span="3"
      android:onClick="loadMenuLayout"
      android:text="@string/menu" />
  </TableRow>

</TableLayout>