<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <EditText
    android:id="@+id/editTextTextMultiLine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50sp"
    android:autofillHints=""
    android:ems="10"
    android:gravity="start|top"
    android:hint="@string/textMultiLineHint"
    android:inputType="textMultiLine"
    android:padding="15sp"
    android:text="@string/LinearLayoutEditTextText" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_weight="0.7"
      android:padding="10dp"
      android:text="@string/ConstraintLayoutLoadText"
      android:textSize="20sp" />

    <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0.3"
      android:onClick="loadConstraintLayout"
      android:padding="10dp"
      android:text="@string/ButtonLoadText" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/textView3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_weight="0.7"
      android:padding="10dp"
      android:text="@string/TableLayoutLoadText"
      android:textSize="20sp" />

    <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0.3"
      android:padding="10dp"
      android:onClick="loadTableLayout"
      android:text="@string/ButtonLoadText" />
  </LinearLayout>

  <RatingBar
    android:id="@+id/ratingBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15sp"
    android:layout_marginRight="15sp"
    android:layout_marginTop="75sp" />

  <TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/TextViewMenuText"
    android:textSize="50sp" />
</LinearLayout>